<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gmail.wediariasantana.pertemuan5.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="29dp"
        android:layout_alignParentTop="true"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:layout_width="357dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editText4"
                android:hint="@string/masukkan_nama" />

            <EditText
                android:layout_width="347dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/editText5"
                android:hint="@string/masukkan_email" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/gander"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    />

                <RadioGroup
                    android:layout_width="0dp"
                    android:layout_height="65dp"
                    android:layout_weight="3.13">

                    <RadioButton
                        android:text="@string/pria"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radioButton"
                        android:layout_weight="1" />

                    <RadioButton
                        android:text="@string/wanita"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radioButton2"
                        android:layout_weight="1" />

                    <RadioButton
                        android:text="@string/radiobutton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radioButton3"
                        android:layout_weight="1" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/kompoten"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView6"
                    android:layout_weight="1"
                    android:textSize="18sp"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:text="@string/c1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/checkBox" />

                    <CheckBox
                        android:text="@string/c"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/checkBox2" />

                    <CheckBox
                        android:text="@string/java"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/checkBox3" />

                    <CheckBox
                        android:text="@string/js"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/checkBox4" />

                    <CheckBox
                        android:text="@string/php"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/checkBox5" />

                    <CheckBox
                        android:text="@string/css"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/checkBox6" />

                    <CheckBox
                        android:text="@string/angular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/checkBox7" />

                    <CheckBox
                        android:text="@string/html"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/checkBox8" />

                    <CheckBox
                        android:text="@string/nodjs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/checkBox9" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:ems="10"
                    android:id="@+id/editText6"
                    android:layout_weight="1"
                    android:hint="@string/masukkan_no_hp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:text="@string/simpan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/button"
                    android:layout_weight="1" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
